user added swag
